[package]
name = "handlebars_misc_helpers"
version = "0.12.2"
authors = ["David Bernard"]
edition = "2021"
description = "A collection of helpers for handlebars (rust) to manage string, json, yaml, toml, path, file, http request."
readme = "README.md"
license = "CC0-1.0"
keywords = ["handlebars"]
#see https://crates.io/category_slugs
categories = ["template-engine", "value-formatting"]
repository = "https://github.com/davidB/handlebars_misc_helpers"
homepage = "https://github.com/davidB/handlebars_misc_helpers"
exclude = [
    "/.github",
    "/.dependabot",
    "/docs/**",
    "/scripts",
    ".gitignore",
    "/tests/**",
]

[dependencies]
attohttpc = { version = "^0.24", optional = true, default-features = false, features = [
    "compress",
    "tls-rustls-webpki-roots",
] }
enquote = { version = "^1.0", optional = true }
handlebars = "^4.0"
log = "^0.4"
Inflector = { version = "^0.11", optional = true }
jmespath = { version = "^0.3", optional = true }
jsonnet-rs = { version = "^0.17", optional = true }
lazy_static = { version = "^1.4", optional = true }
reqwest = { version = "0.11", optional = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "^1", features = ["rc"], optional = true }
serde_json = { version = "^1", optional = true }
serde_yaml = { version = "^0.9", optional = true }
thiserror = "1.0"
toml = { version = "^0.7", optional = true, features = ["preserve_order"] }

[dev-dependencies]
spectral = "0.6"
tempfile = "3.1"
pretty_assertions = "1.1"
unindent = "0.2"

[features]
default = ["string", "http_attohttpc", "json", "jsonnet"]
string = ["dep:Inflector", "dep:enquote"]
http_attohttpc = ["dep:attohttpc", "http_fct"]
http_reqwest = ["dep:reqwest", "http_fct"]
http_fct = []
json = [
    "dep:lazy_static",
    "dep:jmespath",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:toml",
]
jsonnet = ["dep:jsonnet-rs"]
