[package]
name = "handlebars_misc_helpers"
version = "0.16.3"
authors = ["David Bernard"]
edition = "2021"
description = "A collection of helpers for handlebars (rust) to manage string, json, yaml, toml, path, file, http request."
readme = "README.md"
license = "CC0-1.0"
keywords = ["handlebars"]
#see https://crates.io/category_slugs
categories = ["template-engine", "value-formatting"]
repository = "https://github.com/davidB/handlebars_misc_helpers"
homepage = "https://github.com/davidB/handlebars_misc_helpers"
exclude = [
    "/.github",
    "/.dependabot",
    "/docs/**",
    "/scripts",
    ".gitignore",
    "/tests/**",
]

[dependencies]
attohttpc = { version = "^0.28", optional = true, default-features = false, features = [
    "compress",
    "tls-rustls-webpki-roots",
] }
enquote = { version = "^1.0", optional = true }
handlebars = "^6.1"
log = "^0.4"
cruet = { version = "^0.14", optional = true }
jmespath = { version = "^0.3", optional = true }
jsonnet-rs = { version = "^0.17", optional = true }
regex = { version = "^1.10", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "^1", features = ["rc"], optional = true }
serde_json = { version = "^1", optional = true }
serde_yaml = { version = "^0.9", optional = true }
thiserror = "1.0"
toml = { version = "^0.8", optional = true, features = ["preserve_order"] }
uuid = { version = "^1.8", optional = true, features = ["v4", "v7"] }

[dev-dependencies]
tempfile = "3.1"
pretty_assertions = "1.1"
similar-asserts = "1.4"
unindent = "0.2"

[features]
default = ["string", "http_attohttpc", "json", "jsonnet", "regex", "uuid"]
http_attohttpc = ["dep:attohttpc"]
http_reqwest = ["dep:reqwest"]
json = [
    "dep:jmespath",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:toml",
]
jsonnet = ["dep:jsonnet-rs"]
jsontype = ["dep:serde_json"]
regex = ["dep:regex"]
string = ["dep:cruet", "dep:enquote", "jsontype"]
uuid = ["dep:uuid"]
